--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>Odin Recipes.</h1>
     <ul>
         <li><a href="burger.html">Burger</a></li>
-        <li><a href="cake.html"></a></li>
-        <li><a href="pizza.html"></a></li>
+        <li><a href="cake.html">Cake</a></li>
+        <li><a href="pizza.html">Pizza</a></li>
     </ul>    
 </body>
 </html>
